# calibra

./: AGENTS.md  LOG.md  Makefile  README.md  build.py  pyproject.toml
agents/: default.md
calibra/: __init__.py  analyze.py  budget.py  cli.py  compare.py  config.py  failure.py  matrix.py  prices.py  report.py  runner.py  show.py  tasks.py  utils.py  verbose.py
calibra/web/: __init__.py  api.py  cache.py  export.py  security.py  server.py  viewdata.py
calibra/web/static/: style.css
calibra/web/templates/: base.html  campaign.html  campaigns.html  compare.html  diff.html  tasks.html  trial.html  variant.html
docs/: CNAME  advanced.md  analysis.md  cli-reference.md  configuration.md  index.html  quickstart.md  running.md  web-dashboard.md
docs.md/: advanced.md  analysis.md  cli-reference.md  configuration.md  index.md  installation.md  quickstart.md  running.md  tasks.md  web-dashboard.md
docs/css/: style.css
docs/pages/: advanced.html  analysis.html  cli-reference.html  configuration.html  index.html  installation.html  quickstart.html  running.html  tasks.html  web-dashboard.html
scripts/: update-vendor.sh
tasks/fix-typo/: task.md  verify.sh
tasks/fix-typo/env/: main.py
tasks/hello-world/: task.md  verify.sh
tests/: conftest.py  test_analyze.py  test_cli.py  test_compare.py  test_config.py  test_failure.py  test_fixes.py  test_matrix.py  test_report.py  test_reviewer.py  test_runner.py  test_smoke.py  test_tasks.py  test_verbose.py  test_web_api.py  test_web_cache.py  test_web_compare.py  test_web_dashboard.py  test_web_diff.py  test_web_drilldown.py  test_web_export.py  test_web_polish.py  test_web_security.py
