[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calibra"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "swival>=0.10.2",
    "rich",
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "jinja2>=3.1.6",
]

[project.optional-dependencies]
charts = ["matplotlib"]

[project.scripts]
calibra = "calibra.cli:main"

[dependency-groups]
dev = ["pytest", "ruff"]
website = ["markdown", "pillow"]


[tool.hatch.build.targets.sdist]
include = [
    "calibra/",
    "tests/",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]
exclude = [
    "experiments/",
    "results/",
    "tasks/",
    "plans/",
    "scripts/",
    "docs/",
    "docs.md/",
    "tmp/",
]

[tool.ruff]
line-length = 100
exclude = ["tasks/"]
